# gnome-themes-extra

./: .gitignore  .gitlab-ci.yml  meson.build  meson_options.txt
icons/: meson.build
icons/HighContrast/: meson.build
po/: LINGUAS  be.po  hr.po  ie.po  ka.po  oc.po  tr.po
src/: meson.build
themes/: meson.build
themes/Adwaita/: Makefile.am  meson.build
themes/Adwaita-dark/: meson.build
themes/Adwaita-dark/gtk-2.0/: gtkrc  main.rc  meson.build
themes/Adwaita-dark/gtk-3.0/: meson.build
themes/Adwaita/gtk-2.0/: gtkrc  meson.build
themes/Adwaita/gtk-3.0/: meson.build
themes/HighContrast/: index.theme.in  meson.build
themes/HighContrast/gtk-2.0/: meson.build
themes/HighContrast/gtk-3.0/: meson.build
